Rename this local variable name to match the regular expression. Define a constant instead of duplicating this literal "UTF-8" 3 times.